# app/Models/TaskComment.php
@@ -8,7 +8,7 @@ use Illuminate\Database\Eloquent\Model;
 class TaskComment extends Model
 {
     use HasFactory;
-
+    protected $primaryKey = 'comment_id';
     // The table associated with the model (optional if table follows Laravel convention)
     protected $table = 'task_comments';
 
